--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,7 @@
             "@auto-scripts"
         ],
         "compile": [
+            "php bin/console make:migration",
             "php bin/console doctrine:migrations:migrate"
         ]
     },
