--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile" : [
+            "php bin/console doctrine:migration:migrate"
         ]
     },
     "conflict": {
