--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /public/bundles/
 /var/
 /vendor/*
-!/vendor/dompdf
+!/vendor/dompdf/*
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
